/*
 * $Id: ChangeLog,v 1.4871 2006/03/17 01:18:46 fsgiudice Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-03-18 12:43 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hash.c
    * Fixed typo in HB_FUNC( HCOPY ) - reported by Hannes Ziegler

2006-03-17 02:15 UTC+0100 Francesco Saverio Giudice <info/at/fsgiudice.com>
  + xharbour/source/rtl/regexrpl.prg
    + New function HB_REGEXREPLACE()
      Syntax: hb_RegexReplace( cRegex, cString, cReplace,
                               lCaseSensitive, lNewLine, nMaxMatches,
                               nGetMatch ) --> cReturn
  + xharbour/tests/regexrpl.prg
    + Sample tests

  + xharbour/source/rtl/Makefile
  + xharbour/makefile.bc
  + xharbour/makefile.dc
  + xharbour/makefile.gc
  + xharbour/makefile.wc
  + xharbour/makefile.vc
  + xharbour/makefile.pc
  + xharbour/hrbdll.bc
  + xharbour/hrbdll.dc
  + xharbour/hrbdll.gc
  + xharbour/hrbdll.wc
  + xharbour/hrbdll.vc
  + xharbour/hrbdll.pc
    + added regexrpl.prg

  + xharbour/include/hbextern.ch
    + added HB_REGEXREPLACE, HB_CRYPT, HB_DECRYPT

2006-03-15 23:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwin/gtwin.c
    * modified Alt key handling.

2006-03-14 22:35 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/cmdarg.c
    ! Fixed missing external b_MouseEnable in C++ compilation mode

2006-03-14 08:35 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tbrowse.prg
    ! fixed bound error access/assign to ::aCache array under some conditions.
      Created static function ChaceOk() to verify ::aCache validity before
      assign/access it. Changed RefreshCurrent() method to avoid multiple
      trigger before stabilization, that generate tbrowse instability. See
      sample supplied by Ron Pinkas, named tbrx.zip.
