@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4871 2006/03/17 01:18:46 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.4872 2006/03/18 20:43:43 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-03-19 01:38 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
+  * source/vm/dbgentry.c
+    ! Codeblock tracing is ON by default.
 
 2006-03-18 12:43 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
   * source/vm/hash.c
